增加了平板适配

--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -293,6 +293,9 @@ $spread3-pYl: 0px;*/
         @media mq-mobile{
     margin-top: 8em;
         }
+  @media mq-tablet{
+  margin-top: 8em;
+}
   }
 }
 
@@ -314,6 +317,10 @@ $spread3-pYl: 0px;*/
   margin-left: 20px;
 
   @media mq-mobile{
+    width: 50%;
+    display: inline-block;
+  }
+  @media mq-tablet{
     width: 50%;
     display: inline-block;
   }
