--- a/source/css/_partial/mobile-nav.styl
+++ b/source/css/_partial/mobile-nav.styl
@@ -10,6 +10,16 @@
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 0 2px $lighten-grey;
   }
+  @media mq-tablet {
+    display block;
+    position: fixed;
+    z-index:9999;
+    width: 100%;
+    top: 0;
+    height: 3.6em;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 2px $lighten-grey;
+  }
 }
 
 .mobile-nav__inner{
