--- a/source/css/_partial/navigation.styl
+++ b/source/css/_partial/navigation.styl
@@ -8,7 +8,10 @@
   z-index: 1000;
   @media mq-mobile{
     display none;
-}
+  }
+  @media mq-tablet{
+    display none;
+  }
   .side-trigger {
     position: relative;
     width: 48px;
