--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -14,6 +14,9 @@
   @media mq-mobile {
   text-align: center
 }
+  @media mq-tablet {
+    text-align: center
+  }
 }
 
 .post-article__link{
@@ -21,6 +24,9 @@
   @media mq-mobile {
   text-align: center
 }
+  @media mq-tablet {
+    text-align: center
+  }
 }
 
 .post-meta{
@@ -28,6 +34,9 @@
   margin 10px 0;
   @media mq-mobile {
   text-align: center
+  }
+  @media mq-tablet {
+    text-align: center
   }
   i{
     margin: 0 4px;
@@ -59,7 +68,12 @@
   @media mq-mobile {
     background #f5f5f5
     padding 1em
-  border-radius 3px
+    border-radius 3px
+  }
+  @media mq-tablet {
+    background #f5f5f5
+    padding 1em
+    border-radius 3px
   }
 }
 
