--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -2,7 +2,7 @@
 <footer class="footer">
     <div class="footer-inner">
         <div class="footer-inner__copyright">&copy; <%= date(new Date(), 'YYYY') %>
-            <a href="#">modesty</a> by <a href="https://github.com/gary-Shen" target="_blank">gary-Shen</a>
+            <a target="_blank" href="https://github.com/gary-Shen/hexo-theme-modesty">modesty</a> by <a href="https://github.com/gary-Shen" target="_blank">gary-Shen</a>
         </div>
         <div class="footer-inner__author">
             <a target="_blank" href="http://hexo.io/">Hexo</a> theme
