--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -127,7 +127,7 @@ body {
 ::selection      { color: #FFFFFF;  background: #333333; }
 
 .body-wrap {
-  min-height: 500px;
+  min-height: 90%;
   @media mq-mobile {
   margin: 4.6em 1em 0;
   }
