--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,5 +1,6 @@
 .main-container{
-  margin: 48px auto;
+  margin: 0 auto;
+  padding-top: 48px;
   width: 700px;
   @media (max-width: 767px){
     width: 100%;
