--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -66,6 +66,17 @@
     font-weight: 500;
   }
 
+    img{
+      max-width:700px;
+      height: auto;
+      @media mq-mobile {
+        max-width:100%;
+      }
+      @media mq-tablet {
+        max-width:100%;
+      }
+    }
+
   @media mq-mobile {
     background #f5f5f5
     padding 1em
