--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -42,18 +42,13 @@ input, button
 html, body, #container
   height: 100%
 
-body
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 14px;
-  background: #fff;
-  color: #5b5b5b;
-  -webkit-overflow-scrolling: touch
-
 h1, h2, h3 {
   display: block;
   font-weight: bold;
 }
+  p{
+    margin: 1.2em 0;
+  }
 
 h1 {
   font-size: 1.5em
@@ -121,6 +116,7 @@ body {
   font-size: 14px;
   color: $darken-grey;
   padding: 0;
+  background: #efefef;
 }
 
 ::-moz-selection { color: #FFFFFF;  background: #333333; }
