--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -11,3 +11,24 @@
 <% if (theme.mathjax){ %>
 <%- partial('mathjax') %>
 <% } %>
+<script>
+    $(function () {
+        var articleId = $('.post-meta__comment-count a');
+        var thread_key = [];
+        articleId.each(function(i, e){
+            thread_key[i] = $(e).attr('id');
+            console.log(thread_key[i]);
+        });
+
+        var comment_count_url = 'http://api.duoshuo.com/threads/counts.jsonp?short_name=<%- theme.duoshuo %>&threads=' + thread_key.join(',') + '&callback=?';
+        $.ajax({
+            dataType: "jsonp",
+            url: comment_count_url,
+            success: function(res){
+                $.each(res.response, function (i, e) {
+                    $('#' + e.thread_key).text(e.comments + '条评论');
+                })
+            }
+        })
+    })
+</script>
