--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,14 +1,30 @@
 .main-container{
   margin: 0 auto;
-  padding-top: 48px;
+  margin-top: 48px;
   width: 700px;
-  @media (max-width: 767px){
+  @media mq-mobile {
     width: 100%;
+    padding-top: 0.1em;
+  }
+  @media mq-tablet {
+    width: 100%;
+    padding-top: 0.1em;
   }
 }
 
 .post-article{
-  margin-bottom 20px
+  margin-bottom 10px;
+  padding: 10px 30px 20px;
+  background: #fff;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.15);
+  border-radius: 2px;
+  @media mq-mobile {
+    padding: 1em;
+  }
+  @media mq-tablet {
+    padding: 1em;
+  }
+
 }
 
 .post-article__title{
@@ -67,7 +83,7 @@
   }
 
     img{
-      max-width:700px;
+      max-width:100%;
       height: auto;
       @media mq-mobile {
         max-width:100%;
@@ -78,14 +94,8 @@
     }
 
   @media mq-mobile {
-    background #f5f5f5
-    padding 1em
-    border-radius 3px
   }
   @media mq-tablet {
-    background #f5f5f5
-    padding 1em
-    border-radius 3px
   }
 }
 
