--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,17 +1,26 @@
 .footer{
   margin: 20px 0 0 0;
-  background: #f3f3f3;
+  /*background: #f3f3f3;*/
   @media mq-mobile {
     width: 100%;
   }
 }
 
 .footer-inner{
-  width: 700px;
+  width: 660px;
   margin: 0 auto;
   font-size: 12px;
   font-family: $font-en;
-  padding: 10px 0;
+  padding: 10px 20px;
+  color: #c0c0c0;
+  border-radius: 2px 2px 0 0;
+  text-shadow: 0px 1px 0 #FFF;
+  a{
+    color: #c0c0c0;
+    &:hover{
+      color: #999;
+    }
+  }
 
   @media mq-mobile {
     width: auto
