--- a/source/css/_partial/navigation.styl
+++ b/source/css/_partial/navigation.styl
@@ -19,7 +19,8 @@
     cursor: pointer;
     transition: all 0.5s ease-in-out;
     border-radius:50%;
-    border: 1px #FFFFFF solid;
+    border: 1px #D5D5D5 solid;
+    box-shadow: 0 0 0 1px #D0D0D0;
     &:hover {
       border: 1px #cccccc solid;
     }
@@ -59,7 +60,7 @@
 
 .back-to-top {
   transition: all 0.2s ease-in-out;
-  background: $grey;
+  background: #FFFFFF;
   padding: 4px;
   &:hover {
     background: #333;
