--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -14,8 +14,8 @@ $baseBorderColor = #dddddd;
 
 // Font-family
 
-$base-line-height = 1.8;
-$font-zh = Microsoft Jhenghei", "Hiragino Sans GB", "Microsoft YaHei", sans-serif";
+$base-line-height = 200%;
+$font-zh = "Hiragino Sans GB","Microsoft YaHei","微软雅黑",tahoma,arial,simsun,"宋体";
 $font-en = "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 
 // Colors
