--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -271,7 +271,7 @@ $spread3-pYl: 0px;*/
 .page-archive {
     position: relative;
     border-top: #ddd solid 2px;
-    margin-top: 24px;
+    margin-top: 96px;
   background-color: #fff;
   padding: 0 20px 20px;
   border-radius: 2px;
@@ -290,10 +290,11 @@ $spread3-pYl: 0px;*/
       &>h2{
         position: absolute;
         top: -40px;
-        background-color: #f1f1f1;
         padding: 0 6px;
+        left: 0;
         border-radius: 3px;
-
+        border: 1px rgba(197,197,197,0.5) solid;
+        background-color: rgb(229, 229, 229);
       }
         @media mq-mobile{
           margin-top: 3em;
